Bug 91886 - Weston (1.8.92) segfaults during tear-down due to deletion of NULL `backend`, when using RPi backend
Summary: Weston (1.8.92) segfaults during tear-down due to deletion of NULL `backend`,...
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: ARM Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-04 20:00 UTC by John Sadler
Modified: 2015-09-08 13:59 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch to prevent segfault in teardown when using RPi backend (983 bytes, text/plain)
2015-09-04 20:00 UTC, John Sadler
Details

Description John Sadler 2015-09-04 20:00:52 UTC
Created attachment 118088 [details]
Patch to prevent segfault in teardown when using RPi backend

When running with the RPi backend, Weston sefaults during shutdown. This is due to the fact that `compositor->backend` is never initialised, and there is no NULL check prior to calling `destroy()`.

I'm attaching a small patch that fixes the issue by making `rpi_backend_create()` intialise `compositor->backend` - just like the X11 backend does. Please consider this patch for inclusion on master.
Comment 1 John Sadler 2015-09-05 14:06:24 UTC
http://patchwork.freedesktop.org/patch/58751/
Comment 2 Pekka Paalanen 2015-09-08 13:59:39 UTC
commit 76287896408841428804ab94dce2adb8b0b896e3
Author: John Sadler <deathofathousandpapercuts@gmail.com>
Date:   Sat Sep 5 15:01:40 2015 +0100

    rpi: prevent segfault on shut-down due to NULL backend


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.